--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@zixicat/type-generation",
-  "version": "0.2.2",
+  "name": "type-generation",
+  "version": "0.2.3",
   "repository": {
     "type": "git",
     "url": "https://github.com/zixiCat/type-generation"
@@ -29,7 +29,7 @@
     "progress": "^2.0.3"
   },
   "bin": {
-    "type-gen": "./lib/index.js"
+    "type-generation": "./lib/index.js"
   },
   "publishConfig": {
     "access": "public"
@@ -47,6 +47,7 @@
     "eslint-plugin-react-hooks": "^4.3.0",
     "prettier": "^2.5.1",
     "rollup": "^2.63.0",
+    "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "^0.31.1",
     "typescript": "^4.5.4"
   }
