--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,7 @@
     "allowJs": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
-    "declaration": true,
+    "declaration": false,
     "moduleResolution": "node",
     "noImplicitReturns": true,
     "resolveJsonModule": true,
@@ -25,7 +25,6 @@
     "isolatedModules": true,
     "strictNullChecks": true,
     "noUnusedParameters": true,
-    "declarationDir": "dist",
     "jsx": "react-jsx",
     "forceConsistentCasingInFileNames": true,
     "noFallthroughCasesInSwitch": true,
